package com.eposter.backend.screen;

public interface ScreenComponent {
    String display();
}

